FEAT - Added the settings, and linked the progressbar. Also added title to the HTML

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -43,7 +43,7 @@ $mqSize: 768px;
 
 
 
-    --custom-font: 'DynaPuff',  'Comic Sans MS', 'cursive', sans-serif;
+    --custom-font: 'DM Sans', sans-serif;
 
 
 
