FIX - changing the font to "Yatra One"

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Yatra+One&display=swap');
 
 $mqSize: 768px;
 
@@ -43,7 +42,7 @@ $mqSize: 768px;
 
 
 
-    --custom-font: 'DM Sans', sans-serif;
+    --custom-font: 'Yatra One', sans-serif;
 
 
 
